[BACKLOG-44479] - Added dependency so that the Apache shim will be added by default to the big-data-plugin

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -698,6 +698,7 @@
               <goal>single</goal>
             </goals>
             <configuration>
+              <finalName>apache</finalName>
               <appendAssemblyId>false</appendAssemblyId>
               <descriptors>
                 <descriptor>src/main/assembly/zip.xml</descriptor>
