--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -376,7 +376,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-bundle</artifactId>
-      <version>${aws-java-sdk-core.version}</version>
+      <version>${aws-java-sdk.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
