--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -19,11 +19,11 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>org.apache.htrace</groupId>
-      <artifactId>htrace-core</artifactId>
-      <version>${htrace-core.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.htrace</groupId>-->
+<!--      <artifactId>htrace-core</artifactId>-->
+<!--      <version>${htrace-core.version}</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>com.google.cloud.bigdataoss</groupId>
       <artifactId>gcs-connector</artifactId>
