--- a/shims/emr700/driver/pom.xml
+++ b/shims/emr700/driver/pom.xml
@@ -444,10 +444,6 @@
           <artifactId>aircompressor</artifactId>
         </exclusion>
         <exclusion>
-          <artifactId>orc-shims</artifactId>
-          <groupId>org.apache.orc</groupId>
-        </exclusion>
-        <exclusion>
           <artifactId>hadoop-client-api</artifactId>
           <groupId>org.apache.hadoop</groupId>
         </exclusion>
@@ -637,6 +633,10 @@
         <exclusion>
           <artifactId>zookeeper</artifactId>
           <groupId>org.apache.zookeeper</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>orc-core</artifactId>
+          <groupId>org.apache.orc</groupId>
         </exclusion>
       </exclusions>
     </dependency>
