--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -321,6 +321,10 @@
           <groupId>io.airlift</groupId>
           <artifactId>aircompressor</artifactId>
         </exclusion>
+        <exclusion>
+          <artifactId>hadoop-client-api</artifactId>
+          <groupId>org.apache.hadoop</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <!-- used by org.apache.orc -->
@@ -640,9 +644,10 @@
                 *:hadoop-aws,
                 *:hadoop-azure,
                 *:hadoop-azure-datalake,
+                *:hadoop-client,*:hadoop-hdfs-client,
                 com.amazonaws:*,
                 *:parquet-hadoop,*:parquet-hadoop-bundle,*:hadoop-hdfs,
-                *:avro-mapred,*:protobuf-java,*:hadoop-shaded-protobuf_3_25
+                *:avro-mapred,*:protobuf-java,*:hadoop-shaded-protobuf_3_25,
                 org.eclipse.jetty:*,org.eclipse.jetty.websocket:*,
                 com.google.guava:*,
                 <!--Needed for Hive-->
