[BACKLOG-44864] Removing obsolete shim emr700 references and their profiles from code

--- a/shims/emr770/driver/pom.xml
+++ b/shims/emr770/driver/pom.xml
@@ -653,6 +653,10 @@
           <artifactId>orc-core</artifactId>
           <groupId>org.apache.orc</groupId>
         </exclusion>
+        <exclusion>
+          <artifactId>nimbus-jose-jwt</artifactId>
+          <groupId>com.nimbusds</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
