--- a/shims/cdh514/driver/pom.xml
+++ b/shims/cdh514/driver/pom.xml
@@ -5,16 +5,16 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-cdh514-reactor</artifactId>
-    <version>10.2.0.0-SNAPSHOT</version>
+    <version>10.2.0.4-353</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-cdh514-driver</artifactId>
-  <version>10.2.0.0-SNAPSHOT</version>
+  <version>10.2.0.4-353</version>
   <packaging>bundle</packaging>
 
   <properties>
     <commons-lang.version>2.6</commons-lang.version>
-    <pentaho-osgi-bundles.version>10.2.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
+    <pentaho-osgi-bundles.version>10.2.0.4-353</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.8.0</org.apache.avro.version>
     <org.apache.hbase.version>1.2.0-cdh5.14.0</org.apache.hbase.version>
     <org.apache.hive.version>1.1.0-cdh5.14.0</org.apache.hive.version>
