fix[SP-6903]: explicitly declare aws-java-sdk-bundle dependency on cdpdc driver to force the maven poms version and avoid an unsafe version from being pulled transitively

--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -839,6 +839,11 @@
       <artifactId>protobuf-java</artifactId>
       <version>${protobuf-java.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-bundle</artifactId>
+      <version>${aws-java-sdk.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
