--- a/shims/emr770/pmr/pom.xml
+++ b/shims/emr770/pmr/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-emr770-reactor</artifactId>
-    <version>10.2.0.0-SNAPSHOT</version>
+    <version>10.2.0.5-356</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-emr770-pmr-libs</artifactId>
