fix[SP-6898]: centralize netty version and bump to 4.1.118.Final

--- a/common-dependencies-V1/pom.xml
+++ b/common-dependencies-V1/pom.xml
@@ -107,7 +107,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-handler</artifactId>
-      <version>${netty-handler.version}</version>
+      <version>${netty.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
