--- a/common-services-api/pom.xml
+++ b/common-services-api/pom.xml
@@ -44,7 +44,7 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-inline</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${org.mockito.version}</version>
       <scope>test</scope>
     </dependency>
