--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -431,7 +431,7 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-inline</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${org.mockito.version}</version>
       <scope>test</scope>
     </dependency>
