--- a/shims/cdh514/pom.xml
+++ b/shims/cdh514/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-list</artifactId>
-    <version>11.0.0.0-SNAPSHOT</version>
+    <version>11.0.0.0-63</version>
   </parent>
   <artifactId>pentaho-hadoop-shims-cdh514-reactor</artifactId>
   <packaging>pom</packaging>
