[BACKLOG-45457] - Updated names of the root folder for all the shims to match the requirements

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <vendor-driver.version>3.4.0.0.apache</vendor-driver.version>
     <pentaho-code.version>11.0.0.0</pentaho-code.version>
+    <shim.id>apache34</shim.id>
 
     <shim.name>apache</shim.name>
     <!-- default folder -->
