--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -12,6 +12,7 @@
   <packaging>jar</packaging>
 
   <properties>
+    <shim.id>dataproc1421</shim.id>
     <netty.version>4.1.108.Final</netty.version>
     <!-- setting v1.14.4 so shaded jackson-databind inside parquet-hadoop-bundle's  version approximately matches jackson-databind in driver.jar -->
     <parquet.version>1.14.4</parquet.version>
