--- a/shims/hdi40/driver/pom.xml
+++ b/shims/hdi40/driver/pom.xml
@@ -13,6 +13,7 @@
   <packaging>jar</packaging>
 
   <properties>
+    <shim.id>hdi40</shim.id>
     <commons-lang.version>2.6</commons-lang.version>
     <pentaho-osgi-bundles.version>11.0.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.12.0</org.apache.avro.version>
