[BACKLOG-44980][BACKLOG-44981][BACKLOG-45458][BACKLOG-45459][BACKLOG-45460][BACKLOG-45461][BACKLOG-45462][BACKLOG-45463] - Prevent transitive.dependencies from showing up in the PRM

--- a/shims/emr770/pmr/pom.xml
+++ b/shims/emr770/pmr/pom.xml
@@ -144,6 +144,7 @@
             <configuration>
               <outputDirectory>${project.build.directory}/pmr</outputDirectory>
               <includeScope>runtime</includeScope>
+              <excludeTransitive>true</excludeTransitive>
             </configuration>
           </execution>
         </executions>
