--- a/shims/dataproc1421/pmr/pom.xml
+++ b/shims/dataproc1421/pmr/pom.xml
@@ -155,6 +155,7 @@
             <configuration>
               <outputDirectory>${project.build.directory}/pmr</outputDirectory>
               <includeScope>runtime</includeScope>
+              <excludeTransitive>true</excludeTransitive>
             </configuration>
           </execution>
         </executions>
